--- a/02_component/06_event/testPropsUseState2.html
+++ b/02_component/06_event/testPropsUseState2.html
@@ -15,23 +15,22 @@
         const {useState} = React;
         function OrderSystemComponent()
         {
-            const [productPrice, setPrice] = useState(0);
-            const [productCount, setCount] = useState(0);
-            const [totalPrice, setTotalPrice] = useState(0);
+            const [productPrice, setPrice] = useState("");
+            const [productCount, setCount] = useState("");
+            const [totalPrice, setTotalPrice] = useState("");
 
             const onChangeProductPrice = e => {setPrice(e.target.value)};
             const onChangeProductCount = e => {setCount(e.target.value)};
 
-            const OnCalculateTotalPrice = () => {setTotalPrice({productPrice})}
-
+            const OnCalculateTotalPrice = () => {setTotalPrice(parseInt(productPrice) * parseInt(productCount))};
             return(
                 <>
                 <div>
                     <label>상품 가격: </label>
-                    <input type="number" name = "price" placeholder = "가격 입력" value = {productPrice} onChange = {onChangeProductPrice}/>
+                    <input type="text" name = "price" placeholder = "가격 입력" value = {productPrice} onChange = {onChangeProductPrice}/>
                     <br/>
                     <label>상품 수량: </label>
-                    <input type="number" name = "count" placeholder = "수량 입력" value = {productCount} onChange = {onChangeProductCount}/>
+                    <input type="textr" name = "count" placeholder = "수량 입력" value = {productCount} onChange = {onChangeProductCount}/>
                     <br/>
 
                     <button onClick = {OnCalculateTotalPrice}>총합 계산</button>
